@@ -11,6 +11,7 @@ lib/Class/Usul/Cmd/IPC/Runtime.pm
 lib/Class/Usul/Cmd/Options.pm
 lib/Class/Usul/Cmd/Trait/DebugFlag.pm
 lib/Class/Usul/Cmd/Trait/IPC.pm
+lib/Class/Usul/Cmd/Trait/L10N.pm
 lib/Class/Usul/Cmd/Trait/OutputLogging.pm
 lib/Class/Usul/Cmd/Trait/Prompting.pm
 lib/Class/Usul/Cmd/Trait/RunningMethods.pm
